= 2.4.3 =
* changed: default size from 2048 to 1920
* fixed: WP Import plugin breaks during Media imports
* fixed: setting a value to 0 causes errors on multi-site installs

= 2.4.2 =
* changed: noresize in filename also works in batch processing
* fixed: error message does not contain filename when file is missing
* fixed: notice on network settings when deep scan option has not been set before

= 2.4.1 =
* fixed: bulk resizer scan returning incorrect results
* fixed: sprintf error during resizing and upload

= 2.4.0 =
* added: deep scanning option for when attachment metadata isn't updating properly
* fixed: uploads from Gutenberg not detected properly
* fixed: some other plugin(s) trying to muck with the Imsanity settings links and breaking things
* fixed: undefined notice for query during ajax operation
* fixed: stale metadata could prevent further resizing

= 2.3.9 =
* fixed: PNG to JPG filled transparency with black instead of white
* fixed: auto-rotation causes incorrect scaling
* fixed: results box stops scrolling at line 28
* added: pre-emptive checks on file parameter to prevent read errors with getimagesize()

= 2.3.8 =
* added: 'imsanity_crop_image' filter to crop images during resizing
* added: increased security of network settings and AJAX requests
* changed: metadata fetch and update use correct functions instead of direct database queries
* changed: bulk resize search is kinder to your database
* fixed: bulk resize could produce a larger image
* fixed: image file permissions not checked prior to resizing
* fixed: EWWW Image Optimizer optimizes image during resizing instead of waiting for metadata generation
* fixed: JPG quality not displaying correctly on network/multisite settings page
* fixed: some strings were not translatable
* fixed: bulk resize results container was not scrollable
* removed: legacy resize function for WP lower than 3.5

= 2.3.7 =
* fixed: uploads to Media Library not detected properly