@@ -12,7 +12,7 @@ branches:
     - master
 
 php:
-  - 7.2
+  - 7.3
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
