@@ -2,6 +2,7 @@
 * changed: default size from 2048 to 1920
 * fixed: WP Import plugin breaks during Media imports
 * fixed: setting a value to 0 causes errors on multi-site installs
+* fixed: conversion settings not displaying correctly on multi-site
 
 = 2.4.2 =
 * changed: noresize in filename also works in batch processing
